refactor(components): add and implement binding for save-details button

--- a/Components/PurchaseOrder/PurchaseOrderView.axaml
+++ b/Components/PurchaseOrder/PurchaseOrderView.axaml
@@ -68,7 +68,9 @@
                             Grid.Column="2"
                             Classes="Primary"
                             Content="Save Details"
-                            HorizontalAlignment="Right">
+                            HorizontalAlignment="Right"
+                            IsVisible="{CompiledBinding IsInViewMode}"
+                            Command="{CompiledBinding SaveDetailsCommand}">
                         </Button>
                     </Grid>
                     
