--- a/Components/AddNewMember/AddNewMemberView.axaml
+++ b/Components/AddNewMember/AddNewMemberView.axaml
@@ -897,7 +897,7 @@
 											Grid.Row="1" 
 											Grid.Column="2" 
 											Spacing="6"
-											Margin="30,0,0,0">
+											Margin="30,-5,0,0">
 											<CalendarDatePicker
 												shadui:ControlAssist.Label="Date of Birth"
 												shadui:ControlAssist.ReadOnly="True"
@@ -960,30 +960,50 @@
 										</StackPanel>
 									</Grid>
 									
-									<StackPanel Orientation="Horizontal" Spacing="10" Margin="0,30,0,0">
-										<TextBox
-											Name="LetterConsentTextBoxControl2"
-											Classes="Clearable"
-											Width="200"
-											IsReadOnly="True"
-											shadui:ControlAssist.Label="Attach consent form copy"/>
-										<Button 
-											Classes="Primary"
-											Content="Choose File"
-											Command="{CompiledBinding SelectContentFileCommand}"
-											VerticalAlignment="Bottom"/>
-										<Button 
-											Classes="Secondary"
-											Content="View Uploaded Image"
-											IsVisible="{CompiledBinding IsConsentFileSelected}"
-											Command="{CompiledBinding ViewConsentFileCommand}"
-											VerticalAlignment="Bottom"/>
-										<Button 
-											Classes="Destructive"
-											Content="Delete File"
-											Command="{CompiledBinding DeleteConsentFileCommand}"
-											IsVisible="{CompiledBinding IsConsentFileSelected}"
-											VerticalAlignment="Bottom"/>
+									<StackPanel Orientation="Vertical" HorizontalAlignment="Left" Spacing="10" Margin="0,30,0,0">
+										<Border
+											IsVisible="{CompiledBinding IsMinor}"
+											Background="{DynamicResource WarningColor10}"
+											BorderThickness="1"
+											BorderBrush="{DynamicResource WarningColor60}"
+											CornerRadius="5"
+											Padding="15,10"
+											Margin="0,0,0,10">
+											<StackPanel Orientation="Horizontal" Spacing="10">
+												<TextBlock
+													Text="Consent letter required for members aged 3-14 years"
+													FontSize="14"
+													FontWeight="Medium"
+													Foreground="{DynamicResource WarningColor}"
+													VerticalAlignment="Center"
+													TextWrapping="Wrap" />
+											</StackPanel>
+										</Border>
+										<StackPanel Orientation="Horizontal" Spacing="10" IsVisible="{CompiledBinding IsMinor}">
+											<TextBox
+												Name="LetterConsentTextBoxControl2"
+												Classes="Clearable"
+												Width="200"
+												IsReadOnly="True"
+												shadui:ControlAssist.Label="Attach consent form copy"/>
+											<Button 
+												Classes="Primary"
+												Content="Choose File"
+												Command="{CompiledBinding SelectContentFileCommand}"
+												VerticalAlignment="Bottom"/>
+											<Button 
+												Classes="Secondary"
+												Content="View Uploaded Image"
+												Command="{CompiledBinding ViewConsentFileCommand}"
+												IsVisible="{CompiledBinding IsConsentFileSelected}"
+												VerticalAlignment="Bottom"/>
+											<Button 
+												Classes="Destructive"
+												Content="Delete File"
+												Command="{CompiledBinding DeleteConsentFileCommand}"
+												IsVisible="{CompiledBinding IsConsentFileSelected}"
+												VerticalAlignment="Bottom"/>
+										</StackPanel>
 									</StackPanel>
 
 									<TextBlock Text="Membership Plan" Classes="h4" Margin="0,25,0,0" />
