--- a/Components/LogWalkInPurchase/LogWalkInPurchaseView.axaml
+++ b/Components/LogWalkInPurchase/LogWalkInPurchaseView.axaml
@@ -178,8 +178,54 @@
 											</StackPanel>
 										</StackPanel>
 									</Grid>
+									
+									<StackPanel Orientation="Vertical" HorizontalAlignment="Left" Spacing="10" Margin="0,-40,0,0">
+										<Border
+											IsVisible="{CompiledBinding IsMinor}"
+											Background="{DynamicResource WarningColor10}"
+											BorderThickness="1"
+											BorderBrush="{DynamicResource WarningColor60}"
+											CornerRadius="5"
+											Padding="15,10"
+											Margin="0,0,0,10">
+											<StackPanel Orientation="Horizontal" Spacing="10">
+												<TextBlock
+													Text="Consent letter required for walk-in customers aged 3-14 years"
+													FontSize="14"
+													FontWeight="Medium"
+													Foreground="{DynamicResource WarningColor}"
+													VerticalAlignment="Center"
+													TextWrapping="Wrap" />
+											</StackPanel>
+										</Border>
+										<StackPanel Orientation="Horizontal" Spacing="10" IsVisible="{CompiledBinding IsMinor}">
+											<TextBox
+												Name="LetterConsentTextBoxControl1"
+												Classes="Clearable"
+												Width="200"
+												IsReadOnly="True"
+												shadui:ControlAssist.Label="Attach consent form copy"/>
+											<Button 
+												Classes="Primary"
+												Content="Choose File"
+												Command="{CompiledBinding SelectContentFileCommand}"
+												VerticalAlignment="Bottom"/>
+											<Button 
+												Classes="Secondary"
+												Content="View Uploaded Image"
+												Command="{CompiledBinding ViewConsentFileCommand}"
+												IsVisible="{CompiledBinding IsConsentFileSelected}"
+												VerticalAlignment="Bottom"/>
+											<Button 
+												Classes="Destructive"
+												Content="Delete File"
+												Command="{CompiledBinding DeleteConsentFileCommand}"
+												IsVisible="{CompiledBinding IsConsentFileSelected}"
+												VerticalAlignment="Bottom"/>
+										</StackPanel>
+									</StackPanel>
 
-									<TextBlock Text="Walk in Plan" Classes="h4" Margin="0,-40" />
+									<TextBlock Text="Walk in Plan" Classes="h4" Margin="0,20,0,0" />
 									<Grid
 										RowDefinitions="Auto"
 										ColumnDefinitions="Auto Auto Auto">
@@ -233,7 +279,7 @@
 										</StackPanel>
 									</Grid>
 
-									<TextBlock Text="Payment Method" Classes="h4" Margin="0,40" />
+									<TextBlock Text="Payment Method" Classes="h4" Margin="0,30,0,10" />
 									<Grid
 										RowDefinitions="Auto"
 										ColumnDefinitions="Auto Auto Auto">
@@ -791,8 +837,54 @@
 											</StackPanel>
 										</StackPanel>
 									</Grid>
+									
+									<StackPanel Orientation="Vertical" HorizontalAlignment="Left" Spacing="10" Margin="0,-30,0,0">
+										<Border
+											IsVisible="{CompiledBinding IsMinor}"
+											Background="{DynamicResource WarningColor10}"
+											BorderThickness="1"
+											BorderBrush="{DynamicResource WarningColor60}"
+											CornerRadius="5"
+											Padding="15,10"
+											Margin="0,0,0,10">
+											<StackPanel Orientation="Horizontal" Spacing="10">
+												<TextBlock
+													Text="Consent letter required for walk-in customers aged 3-14 years"
+													FontSize="14"
+													FontWeight="Medium"
+													Foreground="{DynamicResource WarningColor}"
+													VerticalAlignment="Center"
+													TextWrapping="Wrap" />
+											</StackPanel>
+										</Border>
+										<StackPanel Orientation="Horizontal" Spacing="10" IsVisible="{CompiledBinding IsMinor}">
+											<TextBox
+												Name="LetterConsentTextBoxControl2"
+												Classes="Clearable"
+												Width="200"
+												IsReadOnly="True"
+												shadui:ControlAssist.Label="Attach consent form copy"/>
+											<Button 
+												Classes="Primary"
+												Content="Choose File"
+												Command="{CompiledBinding SelectContentFileCommand}"
+												VerticalAlignment="Bottom"/>
+											<Button 
+												Classes="Secondary"
+												Content="View Uploaded Image"
+												Command="{CompiledBinding ViewConsentFileCommand}"
+												IsVisible="{CompiledBinding IsConsentFileSelected}"
+												VerticalAlignment="Bottom"/>
+											<Button 
+												Classes="Destructive"
+												Content="Delete File"
+												Command="{CompiledBinding DeleteConsentFileCommand}"
+												IsVisible="{CompiledBinding IsConsentFileSelected}"
+												VerticalAlignment="Bottom"/>
+										</StackPanel>
+									</StackPanel>
 
-									<TextBlock Text="Walk in Plan" Classes="h4" Margin="0,-40" />
+									<TextBlock Text="Walk in Plan" Classes="h4" Margin="0,30,0,0" />
 									<Grid
 										RowDefinitions="Auto"
 										ColumnDefinitions="Auto Auto Auto">
