--- a/Components/EquipmentDialog/EquipmentDialogCard.axaml
+++ b/Components/EquipmentDialog/EquipmentDialogCard.axaml
@@ -202,6 +202,7 @@
 								<ComboBox
                                     shadui:ControlAssist.Label="Status"
                                     PlaceholderText="Select its status"
+                                    IsEnabled="False"
                                     ItemsSource="{CompiledBinding FilteredStatusItems}"
                                     SelectedItem="{CompiledBinding Status, Mode=TwoWay}">
 								</ComboBox>
