feat(services): add and implement export of purchase-order document

--- a/Components/PurchaseOrder/PurchaseOrderView.axaml
+++ b/Components/PurchaseOrder/PurchaseOrderView.axaml
@@ -55,6 +55,7 @@
                             Classes="Outline"
                             Content="Export to PDF"
                             HorizontalAlignment="Left"
+                            Command="{CompiledBinding ExportPurchaseOrderCommand}"
                             IsVisible="{CompiledBinding IsInViewMode}">
 						</Button>
 						<Button
