--- a/Views/ProductPurchaseView.axaml
+++ b/Views/ProductPurchaseView.axaml
@@ -164,6 +164,17 @@
 												Text="{CompiledBinding CustomerFullName}"
 												Classes="h4" />
 										</StackPanel>
+										<StackPanel Orientation="Horizontal" Margin="45,0,0,0">
+											<TextBlock
+												Text="Invoice ID: "
+												VerticalAlignment="Center"
+												Classes="h4" />
+											<TextBlock
+												Text="{CompiledBinding CurrentInvoiceNo}"
+												FontSize="15"
+												VerticalAlignment="Center"
+												FontWeight="Medium"/>
+										</StackPanel>
 									</StackPanel>
 									<Separator Background="{StaticResource ForegroundColor}" Margin="0,0,20,0" />
 									<StackPanel Spacing="10">
@@ -519,6 +530,17 @@
 											<TextBlock
 												Text="{CompiledBinding CustomerFullName}"
 												Classes="h4" />
+										</StackPanel>
+										<StackPanel Orientation="Horizontal" Margin="45,0,0,0">
+											<TextBlock
+												Text="Invoice ID: "
+												VerticalAlignment="Center"
+												Classes="h4" />
+											<TextBlock
+												Text="{CompiledBinding CurrentInvoiceNo}"
+												FontSize="15"
+												VerticalAlignment="Center"
+												FontWeight="Medium"/>
 										</StackPanel>
 									</StackPanel>
 									<Separator Background="{StaticResource ForegroundColor}" Margin="0,0,20,0" />
