--- a/Components/LogWalkInPurchase/LogWalkInPurchaseView.axaml
+++ b/Components/LogWalkInPurchase/LogWalkInPurchaseView.axaml
@@ -400,6 +400,17 @@
 														Text="{CompiledBinding CustomerFullName}"
 														Classes="h4" />
 												</StackPanel>
+												<StackPanel Orientation="Horizontal" Margin="40,-25,0,20">
+													<TextBlock
+														Text="Invoice ID: "
+														VerticalAlignment="Center"
+														Classes="h4" />
+													<TextBlock
+														Text="{CompiledBinding CurrentInvoiceNo}"
+														FontSize="15"
+														VerticalAlignment="Center"
+														FontWeight="Medium"/>
+												</StackPanel>
 											</StackPanel>
 										</Grid>
 										<Separator Background="{StaticResource ForegroundColor}" />
@@ -1058,6 +1069,17 @@
 													<TextBlock
 														Text="{CompiledBinding CustomerFullName}"
 														Classes="h4" />
+												</StackPanel>
+												<StackPanel Orientation="Horizontal" Margin="40,-25,0,20">
+													<TextBlock
+														Text="Invoice ID: "
+														VerticalAlignment="Center"
+														Classes="h4" />
+													<TextBlock
+														Text="{CompiledBinding CurrentInvoiceNo}"
+														FontSize="15"
+														VerticalAlignment="Center"
+														FontWeight="Medium"/>
 												</StackPanel>
 											</StackPanel>
 										</Grid>
