--- a/Components/NotifyDialog/NotifyDialogCard.axaml
+++ b/Components/NotifyDialog/NotifyDialogCard.axaml
@@ -7,7 +7,8 @@
     xmlns:shadui="clr-namespace:ShadUI;assembly=ShadUI"
     x:DataType="vm:NotifyDialogCardViewmodel"
     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-    Width="400"
+    Width="550"
+    Height="580"
     x:Class="AHON_TRACK.Components.NotifyDialog.NotifyDialogCard">
     
     <Design.DataContext>
@@ -36,8 +37,9 @@
                 <shadui:CardDescription Content="Indicate that members have been notified" />
                 <StackPanel Margin="0,20,0,0">
                     <TextBox
-                        shadui:ControlAssist.Height="300"
+                        shadui:ControlAssist.Height="350"
                         shadui:ControlAssist.Label="Description"
+                        TextWrapping="WrapWithOverflow"
                         AcceptsReturn="True"
                         Text="{CompiledBinding TextDescription}"
                         Watermark="Enter a long description here..." />
